input maps, podcast placeholder

--- a/style.css
+++ b/style.css
@@ -15,7 +15,6 @@ body{
 }
 
 #podcastRow{
-  background-image: url("http://4.bp.blogspot.com/-HINf-JIVIMw/UjTZ5BNJzpI/AAAAAAAAdAo/Zw_fRdoxMvs/s640/DSC_0146.JPG");
+  <!--background-image: url("http://4.bp.blogspot.com/-HINf-JIVIMw/UjTZ5BNJzpI/AAAAAAAAdAo/Zw_fRdoxMvs/s640/DSC_0146.JPG");-->
   background-position: bottom right;
-  background-repeat: no-repeat;
 }
