--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
   background-color: #EBEBEB;
   font-family: Arial;
+  color: #000;
   background-image: url('http://2.bp.blogspot.com/-IrLk_g8ulgo/U0aj0gxXrCI/AAAAAAAAFqs/_8GR9iED9zM/s1600/MelbourneCityExplored-43.jpg')
 }
 
