--- a/style.css
+++ b/style.css
@@ -1,15 +1,39 @@
 body{
+  background-image: url('http://nysnapshot.files.wordpress.com/2011/07/img_6028.jpg');
+  background-size: 100% 100%;
+  background-position: bottom-left;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
   background-color: #000;
   font-family: Arial;
   color: #000;
-  background-image: url('http://static.squarespace.com/static/515e31a5e4b0875140ca08d1/t/51c9d527e4b0a39e8220ff44/1372181799900/project-renewal.jpg');
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-  background-position: center;
+}
+html {
+  position: relative;
+  min-height: 100%;
+}
+body {
+  /* Margin bottom by footer height */
+  margin-bottom: 60px;
+}
+.footer {
+  position: absolute;
+  bottom: 0;
+  /* Set the fixed height of the footer here */
+  height: 50px;
+  background-color: #FFF;
+  color: #000;
+  margin-left: -15px;
 }
 
-body div{
-  border-radius: 4px;
+#footer div{
+  background-color: #FFF;
+}
+
+#footer div p{
+  padding-top: 7px;
+  margin-bottom: -10px;
+  color: #000;
 }
 h1{
   font-family: Lobster;
