--- a/style.css
+++ b/style.css
@@ -87,3 +87,15 @@ h5 a:visited{
   <!--background-image: url("http://4.bp.blogspot.com/-HINf-JIVIMw/UjTZ5BNJzpI/AAAAAAAAdAo/Zw_fRdoxMvs/s640/DSC_0146.JPG");-->
   background-position: bottom right;
 }
+
+th{
+  background-color: #EBEBEB;
+}
+
+table, th, td {
+  border: 1px solid black;
+}
+
+.tab-pane h4{
+  font-family: Arial;
+}
